--- a/TestsApp/Podfile
+++ b/TestsApp/Podfile
@@ -3,5 +3,6 @@ target :TestsApp do
   platform :osx, '10.7'
 
   pod 'Kiwi'
+  pod 'NSOperationQueueController', :git => 'https://github.com/stanislaw/NSOperationQueueController'
 end
 
