Major rework towards 0.6
- COCompositeOperations is now based on NSOperation/NSOperationQueue __exclusively__
- Introduce @CompositeOperation.zOperation that manages dependencies and
  runs -[CompositeOperation finish]

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -29,8 +29,7 @@ SOURCE_COMPOSITE_OPERATIONS = $(call find-recursive,$(PROJECT_DIR)/CompositeOper
 					
 SOURCE_TEST_SUITE = $(wildcard $(TESTS_DIR)/Tests/*.m)
 
-SOURCE_TESTS = $(TESTS_DIR)/TestHelpers/TestHelpers.m \
-							 $(call find-recursive,$(shell pwd)/Kiwi,*.m) \
+SOURCE_TESTS = $(call find-recursive,$(shell pwd)/Kiwi,*.m) \
 			         octest.m
 
 
