Fix Makefile script

--- a/DevelopmentApp/Makefile
+++ b/DevelopmentApp/Makefile
@@ -1,9 +1,5 @@
 xcodebuild:
-	xcodebuild -verbose -workspace DevelopmentApp.xcworkspace -scheme DevelopmentApp clean test
+	xcodebuild -verbose -workspace DevelopmentApp.xcworkspace -scheme Tests clean test
 
 xctool:
-	xctool -workspace DevelopmentApp.xcworkspace -scheme DevelopmentApp clean test
-
-clean:
-	rm -rfv /Users/$(shell whoami)/Library/Developer/Xcode/DerivedData/DevelopmentApp*
-	rm -rf DevelopmentApp/build/
+	xctool -workspace DevelopmentApp.xcworkspace -scheme Tests clean test
