--- a/DevelopmentApp/DevelopmentApp.xcodeproj/xcshareddata/xcschemes/CompositeOperations-iOS.xcscheme
+++ b/DevelopmentApp/DevelopmentApp.xcodeproj/xcshareddata/xcschemes/CompositeOperations-iOS.xcscheme
@@ -4,7 +4,7 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "864EE0F51AC4B362007D1B13"
-               BuildableName = "CompositeOperations.framework"
-               BlueprintName = "CompositeOperations"
+               BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
+               BuildableName = "CompositeOperations-iOS.framework"
+               BlueprintName = "CompositeOperations-iOS"
+               ReferencedContainer = "container:DevelopmentApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "86BB7DAC1B361FC400E65FFF"
+               BuildableName = "CompositeOperations-iOSTests.xctest"
+               BlueprintName = "CompositeOperations-iOSTests"
                ReferencedContainer = "container:DevelopmentApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +46,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "864EE0FF1AC4B362007D1B13"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
+               BlueprintIdentifier = "86BB7DAC1B361FC400E65FFF"
+               BuildableName = "CompositeOperations-iOSTests.xctest"
+               BlueprintName = "CompositeOperations-iOSTests"
                ReferencedContainer = "container:DevelopmentApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "864EE0F51AC4B362007D1B13"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations"
+            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
+            BuildableName = "CompositeOperations-iOS.framework"
+            BlueprintName = "CompositeOperations-iOS"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -61,9 +75,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "864EE0F51AC4B362007D1B13"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations"
+            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
+            BuildableName = "CompositeOperations-iOS.framework"
+            BlueprintName = "CompositeOperations-iOS"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -79,9 +93,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "864EE0F51AC4B362007D1B13"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations"
+            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
+            BuildableName = "CompositeOperations-iOS.framework"
+            BlueprintName = "CompositeOperations-iOS"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
