--- a/DevelopmentApp/DevelopmentApp.xcodeproj/xcshareddata/xcschemes/CompositeOperations-OSX.xcscheme
+++ b/DevelopmentApp/DevelopmentApp.xcodeproj/xcshareddata/xcschemes/CompositeOperations-OSX.xcscheme
@@ -4,7 +4,7 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
-               BuildableName = "CompositeOperations.framework"
-               BlueprintName = "CompositeOperations-iOS"
+               BlueprintIdentifier = "86BB7DCF1B3621E000E65FFF"
+               BuildableName = "CompositeOperations-OSX.framework"
+               BlueprintName = "CompositeOperations-OSX"
                ReferencedContainer = "container:DevelopmentApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,9 +28,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "86BB7DAC1B361FC400E65FFF"
-               BuildableName = "CompositeOperations-iOSTests.xctest"
-               BlueprintName = "CompositeOperations-iOSTests"
+               BlueprintIdentifier = "86BB7DD91B3621E000E65FFF"
+               BuildableName = "CompositeOperations-OSXTests.xctest"
+               BlueprintName = "CompositeOperations-OSXTests"
                ReferencedContainer = "container:DevelopmentApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,9 +46,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "86BB7DAC1B361FC400E65FFF"
-               BuildableName = "CompositeOperations-iOSTests.xctest"
-               BlueprintName = "CompositeOperations-iOSTests"
+               BlueprintIdentifier = "86BB7DD91B3621E000E65FFF"
+               BuildableName = "CompositeOperations-OSXTests.xctest"
+               BlueprintName = "CompositeOperations-OSXTests"
                ReferencedContainer = "container:DevelopmentApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations-iOS"
+            BlueprintIdentifier = "86BB7DCF1B3621E000E65FFF"
+            BuildableName = "CompositeOperations-OSX.framework"
+            BlueprintName = "CompositeOperations-OSX"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -75,9 +75,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations-iOS"
+            BlueprintIdentifier = "86BB7DCF1B3621E000E65FFF"
+            BuildableName = "CompositeOperations-OSX.framework"
+            BlueprintName = "CompositeOperations-OSX"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -93,9 +93,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "86BB7DA21B361FC300E65FFF"
-            BuildableName = "CompositeOperations.framework"
-            BlueprintName = "CompositeOperations-iOS"
+            BlueprintIdentifier = "86BB7DCF1B3621E000E65FFF"
+            BuildableName = "CompositeOperations-OSX.framework"
+            BlueprintName = "CompositeOperations-OSX"
             ReferencedContainer = "container:DevelopmentApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
