--- a/DevelopmentApp/Makefile
+++ b/DevelopmentApp/Makefile
@@ -1,8 +1,8 @@
 xctool:
 	xctool -project DevelopmentApp.xcodeproj \
-	       -scheme CompositeOperations \
-				 -sdk iphonesimulator \
-				 clean test
+               -scheme CompositeOperations-iOS \
+               -sdk iphonesimulator \
+               clean test
 
 xcodebuild:
 	xcodebuild -verbose -project DevelopmentApp.xcodeproj -scheme CompositeOperations clean test
