Make operations to be on project-level: sequential and parallel

--- a/CompositeOperations/Info.plist
+++ b/CompositeOperations/Info.plist
@@ -15,11 +15,13 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.7</string>
+	<string>$(COMPOSITE_OPERATIONS_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
