--- a/DevelopmentApp/CompositeOperations-OSX/Info.plist
+++ b/DevelopmentApp/CompositeOperations-OSX/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>$(COMPOSITE_OPERATIONS_BUILD_NUMBER)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2015 Stanislaw Pankevich. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
